--- a/PRACTICA 2/PRACTICA2DESDE0/PRACTICA2DESDE0.vcxproj.filters
+++ b/PRACTICA 2/PRACTICA2DESDE0/PRACTICA2DESDE0.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="PRACTICA2DESDE0.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Crono.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cabecera.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Crono.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
